--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	fixedPoint
+NAME	=	fixedPointFull
 
 CC		=	c++
 
