--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	fixedPoint
+NAME	=	fixedPoint00
 
 CC		=	c++
 
